# ex4

./: CMakeLists.txt
etc/: info.txt
src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  Cell.cpp  Cell.h  Client.cpp  Client.h  ConsoleScreen.cpp  ConsoleScreen.h  Coordinate.cpp  Coordinate.h  FileReader.cpp  FileReader.h  Game.cpp  Game.h  GameFlow.cpp  GameFlow.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  LocalGame.cpp  LocalGame.h  NetGame.cpp  NetGame.h  Player.cpp  Player.h  RegularLogic.cpp  RegularLogic.h  Screen.cpp  Screen.h  gitLog.txt  main.cpp  makefile
src/tests/: AIplayer_test.cpp  AIplayer_test.h  Board_test.cpp  Board_test.h  game_flow_test.cpp  game_flow_test.h  gtest_main.cpp  gtest_main.h  logic_test.cpp  logic_test.h
